Fix 2D optics with ironsights override

--- a/Scripts/Workbench/project.cfg
+++ b/Scripts/Workbench/project.cfg
@@ -1,6 +1,6 @@
 ModName=@LegacyGunplay
-AdditionalMPMods=@CF;@CommunityOnlineTools
-AdditionalSPMods=@CF
+AdditionalMPMods=@CF;@CommunityOnlineTools;@MortysWeapons
+AdditionalSPMods=@CF;@MortysWeapons
 PrefixLinkRoot=LegacyGunplay
 WorkbenchEXE=workbenchApp.exe
 WorkbenchLaunchParams=-filePatching
